# GhostHost

./: .gitignore  README.md  notes.txt
application/: .taurignore  components.json  index.html  package.json  tailwind.config.js  vite.config.js
application/src/: App.css  App.jsx  main.jsx
application/src-tauri/: Cargo.toml  tauri.conf.json  testfile.txt
application/src-tauri/src/: backup.rs  main.rs  mainbackup.rs
application/src-tauri/src/old/: chunks.rs  decode.rs  decrypt.rs  download.rs  encode.rs  encrypt.rs  upload.rs
application/src/components/: Acc.jsx  CountdownTimer.jsx  DevDrawer.jsx  FileList.jsx  FileSelector.jsx  Navbar.jsx  RebuildFiles.jsx  UploadButton.jsx
application/src/components/old/: FileSelector.jsx  StatusMessage.jsx  UploadButton.jsx
application/src/old/: App.jsx
application/src/pages/: Downloadpage.jsx  Homepage.jsx  Testpage.jsx  Uploadpage.jsx
testing/Performance/: Cargo.toml
testing/Performance/src/: main.rs
testing/PoC/: main.js  main.py  main_nofiles.py  multi-main.js  package.json  testMP4.py  testing.py
