[package]
name = "performance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
openssl = { version = "0.10", features = ["v102"] }
base64 = "0.13"
hex = "0.4"
crc32fast = "1.2"
serde_urlencoded = "0.6"
